--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <div class="row">
                            <div class="col-md-6">
                               <div class="taital_main">
-                                 <h4 class="banner_taital">Web Agency</h4>
+                                 <h4 class="banner_taital">Tempat Joki</h4>
                                  <p class="banner_text">It is a long established fact that a reader will be distracted by the readable content of a page when looking at its layout. The point of using Lorem I</p>
                                  <div class="read_bt"><a href="#">Read More</a></div>
                               </div>
