--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
    <div class="header_section">
       <div class="container">
          <nav class="navbar navbar-dark bg-dark">
-            <a class="logo" href="index.html">Headooooo</a>
+            <a class="logo" href="index.html"><h4 class="banner_taital">JOKI <span style="color: #265BBE;">KODE</span> </h4></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
                aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
                <span class="navbar-toggler-icon"></span>
