--- a/index.html
+++ b/index.html
@@ -40,100 +40,32 @@
    <div class="header_section">
       <div class="container">
          <nav class="navbar navbar-dark bg-dark">
-            <a class="logo" href="index.html"><h4 class="banner_taital">JOKI <span style="color: #265BBE;">KODE</span> </h4></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample01"
-               aria-controls="navbarsExample01" aria-expanded="false" aria-label="Toggle navigation">
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarsExample01">
-               <ul class="navbar-nav mr-auto">
-                  <li class="nav-item">
-                     <a class="nav-link" href="index.html">Home</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="about.html">About</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="services.html">Services</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="blog.html">Blog</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="client.html">Client</a>
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link" href="contact.html">Contact Us</a>
-                  </li>
-               </ul>
-            </div>
+            <a class="logo" href="index.html"><h1 class="text-white font-weight-bold" style="font-size: 30px;">JOKICODE</h1></a>
          </nav>
       </div>
       <!--banner section start -->
       <div class="banner_section layout_padding">
-         <div id="my_slider" class="carousel slide" data-ride="carousel">
-            <div class="carousel-inner">
-               <div class="carousel-item active">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <div class="taital_main">
-                              <h4 class="banner_taital">Tempat Joki</h4>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by
-                                 the readable content of a page when looking at its layout. The point of using Lorem I
-                              </p>
-                              <div class="read_bt"><a href="#">Read More</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div><img src="images/img-1.png" class="image_1"></div>
+         <div class="carousel-inner">
+            <div class="carousel-item active">
+               <div class="container">
+                  <div class="row">
+                     <div class="col-md-6">
+                        <div class="taital_main">
+                           <h4 class="banner_taital" style="font-size: 75px;">Bingung Tugas Akhir?</h4>
+                           
+                           <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Sini kami kerjain!</a></div>
                         </div>
                      </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <div class="taital_main">
-                              <h4 class="banner_taital">Web Agency</h4>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by
-                                 the readable content of a page when looking at its layout. The point of using Lorem I
-                              </p>
-                              <div class="read_bt"><a href="#">Read More</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div><img src="images/img-1.png" class="image_1"></div>
-                        </div>
-                     </div>
-                  </div>
-               </div>
-               <div class="carousel-item">
-                  <div class="container">
-                     <div class="row">
-                        <div class="col-md-6">
-                           <div class="taital_main">
-                              <h4 class="banner_taital">Web Agency</h4>
-                              <p class="banner_text">It is a long established fact that a reader will be distracted by
-                                 the readable content of a page when looking at its layout. The point of using Lorem I
-                              </p>
-                              <div class="read_bt"><a href="#">Read More</a></div>
-                           </div>
-                        </div>
-                        <div class="col-md-6">
-                           <div><img src="images/img-1.png" class="image_1"></div>
+                     <div class="col-md-6">
+                        <div>
+                           <a href="">
+                              <img src="images/img-1.png" class="image_1">
+                           </a>
                         </div>
                      </div>
                   </div>
                </div>
             </div>
-            <a class="carousel-control-prev" href="#my_slider" role="button" data-slide="prev">
-               <i class=""><img src="images/left-icon.png"></i>
-            </a>
-            <a class="carousel-control-next" href="#my_slider" role="button" data-slide="next">
-               <i class=""><img src="images/right-icon.png"></i>
-            </a>
          </div>
       </div>
       <!--banner section end -->
