--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
                <div class="image_2"><img src="images/img-2.png"></div>
             </div>
             <div class="col-md-6">
-               <h1 class="about_taital">About <span class="us_text">Us</span></h1>
-               <p class="about_text">It is a long established fact that a reader will be distracted by the readable
-                  content of a page when looking at its layout. The point of using Lorem </p>
-               <div class="read_bt_1"><a href="#">Read More</a></div>
+               <h1 class="about_taital">Tentang <span class="us_text">Kami</span></h1>
+               <p class="about_text">JokiCode adalah startup yang berdiri pada tahun 2023 dan bergerak di bidang layanan jasa pengerjaan tugas. Sejak didirikan, kami terus berupaya untuk mengembangkan layanan yang kami berikan, hingga kini JokiCode sudah mampu membantu pengerjaan hampir segala jenis tugas kuliah.</p>
+               <div class="read_bt_1"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Hubungi Kami</a></div>
             </div>
          </div>
       </div>
@@ -91,32 +90,27 @@
    <!--services section start -->
    <div class="services_section layout_padding">
       <div class="container">
-         <h1 class="service_taital"><span class="our_text">Our</span> Services</h1>
-         <p class="service_text">There are many variations of passages of Lorem Ipsum available, but the majority have
-            suffered </p>
+         <h1 class="service_taital">Pelayanan <span class="our_text">Kami</span> </h1>
+         <!-- <p class="service_text">There are many variations of passages of Lorem Ipsum available, but the majority have
+            suffered </p> -->
          <div class="services_section_2">
             <div class="row">
                <div class="col-sm-4">
                   <div class="icon_1"><img src="images/icon-1.png"></div>
-                  <h4 class="design_text">Logo Design</h4>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing </p>
+                  <h4 class="design_text">Tugas Akhir</h4>
                   <div class="icon_1"><img src="images/icon-2.png"></div>
-                  <h4 class="design_text">Web Development</h4>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing </p>
+                  <h4 class="design_text">Seminar Proposal</h4>
                </div>
                <div class="col-sm-4">
                   <div class="icon_3"><img src="images/icon-3.png"></div>
-                  <h4 class="design_text">Web Design</h4>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing </p>
-                  <div class="read_bt_2"><a href="#">Read More</a></div>
+                  <h4 class="design_text">Praktek Kerja Lapangan</h4>
+                  <div class="read_bt_2"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Hubungi</a></div>
                </div>
                <div class="col-sm-4">
                   <div class="icon_1"><img src="images/icon-4.png"></div>
-                  <h4 class="design_text">Banner Design</h4>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing </p>
+                  <h4 class="design_text">Tugas Aplikasi</h4>
                   <div class="icon_1"><img src="images/icon-5.png"></div>
-                  <h4 class="design_text">Social Media Work</h4>
-                  <p class="lorem_text">Lorem ipsum dolor sit amet, consectetur adipiscing </p>
+                  <h4 class="design_text">Naskah</h4>
                </div>
             </div>
          </div>
@@ -164,23 +158,25 @@
    </div>
    <!--blog section end -->
    <!--newsletter section start -->
-   <div class="newsletter_section">
+   
+   <!-- dis -->
+
+   <!-- <div class="newsletter_section">
       <div class="container">
          <div class="row">
             <div class="col-md-6">
-               <h1 class="newsletter_text">Subscribe Now </h1>
-               <p class="tempor_text">dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                  labore et dolore magna aliqua. Ut enim ad minim </p>
+               <h1 class="newsletter_text">Kontak</h1>
+               <p class="tempor_text"> </p>
             </div>
             <div class="col-md-6">
                <div class="mail_bt_main">
                   <input type="text" class="mail_text" placeholder="Enter Tour Mail" name="Enter Tour Mail">
-                  <div class="subscribe_bt"><a href="#">SUBSCRIBE</a></div>
+                  <div class="subscribe_bt"><a href="mailto:someone@example.com">SUBSCRIBE</a></div>
                </div>
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
    <!--newsletter section end -->
    <!--client section start -->
    <div class="client_section layout_padding">
