--- a/index.html
+++ b/index.html
@@ -359,8 +359,7 @@
    <!--copyright section start -->
    <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">Copyright 2023 All Right Reserved By <a href="https://html.design">Free Html
-               Templates</a> Distributed by: <a href="https://themewagon.com">ThemeWagon</a></p>
+         <p class="copyright_text">Copyright 2023 All Right Designed by: <a href="https://jokibisa.netlify.app">JOKICODE</a></p>
       </div>
    </div>
    <!--copyright section end -->
