--- a/index.html
+++ b/index.html
@@ -312,16 +312,15 @@
    <div class="footer_section layout_padding">
       <div class="container">
          <div class="address_main">
-            <div class="address_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_15">Loram
-                     Ipusm hosting web</span></a></div>
+            <div class="address_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_15">Banjarbaru</span></a></div>
             <div class="address_text"><a href="#"><img src="images/call-icon.png"><span
-                     class="padding_left_15">+7586656566</span></a></div>
+                     class="padding_left_15">+6281999524453</span></a></div>
             <div class="address_text"><a href="#"><img src="images/mail-icon.png"><span
-                     class="padding_left_15">demo@gmail.com</span></a></div>
+                     class="padding_left_15">jokibisa@gmail.com</span></a></div>
          </div>
          <div class="footer_section_2">
-            <div class="row">
-               <div class="col-lg-3 col-sm-6">
+            <div class="row d-flex justify-content-center">
+               <!-- <div class="col-lg-3 col-sm-6">
                   <h4 class="link_text">Useful link</h4>
                   <div class="footer_menu">
                      <ul>
@@ -331,14 +330,14 @@
                         <li><a href="contact.html">Contact Us</a></li>
                      </ul>
                   </div>
-               </div>
-               <div class="col-lg-3 col-sm-6">
+               </div> -->
+               <!-- <div class="col-lg-3 col-sm-6">
                   <h4 class="link_text">web design</h4>
                   <p class="footer_text">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaL oreadipiscing </p>
-               </div>
+               </div> -->
                <div class="col-lg-3 col-sm-6">
-                  <h4 class="link_text">social media</h4>
-                  <div class="social_icon">
+                  <h4 class="link_text text-center">social media</h4>
+                  <div class="social_icon d-flex justify-content-center">
                      <ul>
                         <li><a href="#"><img src="images/fb-icon.png"></a></li>
                         <li><a href="#"><img src="images/twitter-icon.png"></a></li>
@@ -347,10 +346,10 @@
                      </ul>
                   </div>
                </div>
-               <div class="col-lg-3 col-sm-6">
+               <!-- <div class="col-lg-3 col-sm-6">
                   <h4 class="link_text">Our Branchs</h4>
                   <p class="footer_text_1">Lorem ipsum dolor sit amet, consectetur adipiscinaliquaLoreadipiscing </p>
-               </div>
+               </div> -->
             </div>
          </div>
       </div>
