--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
    <div class="header_section">
       <div class="container">
          <nav class="navbar navbar-dark bg-dark">
-            <a class="logo" href="index.html"><h1 class="text-white font-weight-bold" style="font-size: 30px;">JOKICODE</h1></a>
+            <a class="logo" href="index.html">
+               <h1 class="text-white font-weight-bold" style="font-size: 30px;">JOKICODE</h1>
+            </a>
          </nav>
       </div>
       <!--banner section start -->
@@ -52,8 +54,10 @@
                      <div class="col-md-6">
                         <div class="taital_main">
                            <h4 class="banner_taital" style="font-size: 75px;">Bingung Tugas Akhir?</h4>
-                           
-                           <div class="read_bt"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Sini kami kerjain!</a></div>
+
+                           <div class="read_bt"><a
+                                 href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!"
+                                 target="_blank">Sini kami kerjain!</a></div>
                         </div>
                      </div>
                      <div class="col-md-6">
@@ -80,8 +84,12 @@
             </div>
             <div class="col-md-6">
                <h1 class="about_taital">Tentang <span class="us_text">Kami</span></h1>
-               <p class="about_text">JokiCode adalah startup yang berdiri pada tahun 2023 dan bergerak di bidang layanan jasa pengerjaan tugas. Sejak didirikan, kami terus berupaya untuk mengembangkan layanan yang kami berikan, hingga kini JokiCode sudah mampu membantu pengerjaan hampir segala jenis tugas kuliah.</p>
-               <div class="read_bt_1"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Hubungi Kami</a></div>
+               <p class="about_text">JokiCode adalah startup yang berdiri pada tahun 2023 dan bergerak di bidang layanan
+                  jasa pengerjaan tugas. Sejak didirikan, kami terus berupaya untuk mengembangkan layanan yang kami
+                  berikan, hingga kini JokiCode sudah mampu membantu pengerjaan hampir segala jenis tugas kuliah.</p>
+               <div class="read_bt_1"><a
+                     href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!"
+                     target="_blank">Hubungi Kami</a></div>
             </div>
          </div>
       </div>
@@ -104,7 +112,9 @@
                <div class="col-sm-4">
                   <div class="icon_3"><img src="images/icon-3.png"></div>
                   <h4 class="design_text">Praktek Kerja Lapangan</h4>
-                  <div class="read_bt_2"><a href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!" target="_blank">Hubungi</a></div>
+                  <div class="read_bt_2"><a
+                        href="https://api.whatsapp.com/send?phone=6285947567015&text=Butuh%20bantuan%20bimbingan!"
+                        target="_blank">Hubungi</a></div>
                </div>
                <div class="col-sm-4">
                   <div class="icon_1"><img src="images/icon-4.png"></div>
@@ -120,36 +130,54 @@
    <!--blog section start -->
    <div class="blog_section layout_padding">
       <div class="container">
-         <h1 class="blog_taital"><span class="our_text">Our</span> Blog</h1>
-         <p class="blog_text">There are many variations of passages of Lorem Ipsum available, but the majority have
-            suffered </p>
+         <h1 class="blog_taital"><span class="our_text">Paket</span> JOKICODE</h1>
+         <p class="blog_text">"Kualitas Terbaik dalam Mewujudkan Ide Anda: Paket Jasa Pembuatan Aplikasi Tugas, PKL, dan
+            Skripsi oleh JOKICODE."</p>
          <div class="services_section_2 layout_padding">
             <div class="row">
                <div class="col-md-4">
                   <div class="box_main">
                      <div class="student_bg"><img src="images/img-3.png" class="student_bg"></div>
-                     <div class="image_15">19<br>Feb</div>
-                     <h4 class="hannery_text">There are many variations</h4>
-                     <p class="fact_text">dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                     <div class="image_15">1</div>
+                     <h4 class="hannery_text">Aplikasi Web sistem informasi</h4>
+                     <p class="fact_text">Kami menyediakan paket Aplikasi Web Tugas yang mencakup aplikasi berbasis
+                        website. Aplikasi web memudahkan Anda dalam mengatur tugas, melacak progres, dan
+                        berkolaborasi secara online. Solusi ini dirancang untuk membantu Anda menyelesaikan tugas
+                        dengan lebih efisien.
+
+                        <br>
+                        html, css, javascript, java, php, mobile android, dll.
+                        <br>
+                     <h4 class="hannery_text">Mulai dari <span class="badge bg-info text-white">Rp. 200K</span></h4>
+                     </p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_main">
                      <div class="student_bg"><img src="images/img-4.png" class="student_bg"></div>
-                     <div class="image_15">19<br>Feb</div>
-                     <h4 class="hannery_text">There are many variations</h4>
-                     <p class="fact_text">dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                     <div class="image_15">2</div>
+                     <h4 class="hannery_text">Aplikasi PKL</h4>
+                     <p class="fact_text">Kami menawarkan paket jasa pembuatan aplikasi PKL yang mencakup aplikasi
+                        berbasis website dan Android. Dengan aplikasi berbasis website, Anda dapat mengelola data,
+                        melacak progres, dan berkomunikasi dengan supervisor secara online. Aplikasi Android kami
+                        memungkinkan akses praktis di mana saja, bahkan tanpa internet. Solusi ini dirancang untuk
+                        membantu Anda menjalani PKL dengan lebih efisien.
+                     <h4 class="hannery_text">Mulai dari <span class="badge bg-info text-white">Rp. 800K</span></h4>
+                     </p>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="box_main">
                      <div><img src="images/img-5.png" class="student_bg"></div>
-                     <div class="image_15">19<br>Feb</div>
-                     <h4 class="hannery_text">There are many variations</h4>
-                     <p class="fact_text">dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud </p>
+                     <div class="image_15">3</div>
+                     <h4 class="hannery_text">Aplikasi Skripsi</h4>
+                     <p class="fact_text">
+                        Kami hadir dengan paket aplikasi skripsi yang inklusif, mencakup aplikasi berbasis website dan
+                        Android. Dengan aplikasi web, Anda dapat mengelola data, menganalisis, dan berkolaborasi dengan
+                        mudah. Aplikasi Android memberikan akses praktis di mana saja, membantu Anda menjalani
+                        penelitian skripsi dengan efisien. Solusi ini dirancang untuk membantu Anda sukses dalam
+                        menyelesaikan skripsi Anda.</p>
+                     <h4 class="hannery_text">Mulai dari <span class="badge bg-info text-white">Rp. 1800K</span></h4>
                   </div>
                </div>
             </div>
@@ -158,7 +186,7 @@
    </div>
    <!--blog section end -->
    <!--newsletter section start -->
-   
+
    <!-- dis -->
 
    <!-- <div class="newsletter_section">
@@ -179,7 +207,7 @@
    </div> -->
    <!--newsletter section end -->
    <!--client section start -->
-   <div class="client_section layout_padding">
+   <!-- <div class="client_section layout_padding">
       <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
          <ol class="carousel-indicators">
             <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -306,13 +334,14 @@
             </div>
          </div>
       </div>
-   </div>
+   </div> -->
    <!--client section end -->
    <!--footer section start -->
    <div class="footer_section layout_padding">
       <div class="container">
          <div class="address_main">
-            <div class="address_text"><a href="#"><img src="images/map-icon.png"><span class="padding_left_15">Banjarbaru</span></a></div>
+            <div class="address_text"><a href="#"><img src="images/map-icon.png"><span
+                     class="padding_left_15">Banjarbaru</span></a></div>
             <div class="address_text"><a href="#"><img src="images/call-icon.png"><span
                      class="padding_left_15">+6281999524453</span></a></div>
             <div class="address_text"><a href="#"><img src="images/mail-icon.png"><span
@@ -358,7 +387,8 @@
    <!--copyright section start -->
    <div class="copyright_section">
       <div class="container">
-         <p class="copyright_text">Copyright 2023 All Right Designed by: <a href="https://jokibisa.netlify.app">JOKICODE</a></p>
+         <p class="copyright_text">Copyright 2023 All Right Designed by: <a
+               href="https://jokibisa.netlify.app">JOKICODE</a></p>
       </div>
    </div>
    <!--copyright section end -->
